tests/type/errors/bad_return5.typedsol
7:9 error: Mismatched return type for function